--- a/Ketch/UserInterface/Settings/SettingsView.xib
+++ b/Ketch/UserInterface/Settings/SettingsView.xib
@@ -32,7 +32,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SettingsBackgroundView" customModule="Ketch" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -186,6 +186,7 @@
                     </connections>
                 </button>
             </subviews>
+            <color key="backgroundColor" red="0.94003820419311523" green="0.98082369565963745" blue="0.96848088502883911" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="r72-wg-Xj7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="0Vw-oe-hIw"/>
                 <constraint firstItem="Tiq-Jx-Jmw" firstAttribute="top" secondItem="Nrc-Dc-N50" secondAttribute="bottom" constant="32" id="0or-Fj-RLr"/>
